exports[`test Child node 1`] = `
"<a class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Dark tone class + light tone 1`] = `
"<div style="background: rgb(255, 255, 255); padding: 10px;">
  <a class="pe-fab" tabindex="0">
  <div class="pe-button__content">
    <div class="pe-shadow pe-shadow--animated">
      <div class="pe-shadow__bottom pe-shadow--z-1"></div>
      <div class="pe-shadow__top pe-shadow--z-1"></div>
    </div>
    <div class="pe-ripple pe-ripple--constrained">
      <div class="pe-ripple__mask">
        <div class="pe-ripple__waves"></div>
      </div>
    </div>
    <div class="pe-button__wash"></div>
    <div class="pe-button__focus"></div>
    <div class="pe-fab__content">
      <div class="pe-icon pe-icon--regular">
        <div class="pe-svg">
          <svg xmlns="http://www.w3.org/2000/svg" width="24"
          height="24" viewbox="0 0 24 24">
            <path d=
            "M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=
  "pe-fab tests-fab-themed-fab tests-fab-themed-fab" tabindex="0">
  <div class="pe-button__content">
    <div class="pe-shadow pe-shadow--animated">
      <div class="pe-shadow__bottom pe-shadow--z-1"></div>
      <div class="pe-shadow__top pe-shadow--z-1"></div>
    </div>
    <div class="pe-ripple pe-ripple--constrained">
      <div class="pe-ripple__mask">
        <div class="pe-ripple__waves"></div>
      </div>
    </div>
    <div class="pe-button__wash"></div>
    <div class="pe-button__focus"></div>
    <div class="pe-fab__content">
      <div class="pe-icon pe-icon--regular">
        <div class="pe-svg">
          <svg xmlns="http://www.w3.org/2000/svg" width="24"
          height="24" viewbox="0 0 24 24">
            <path d=
            "M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Dark tone class + light tone class 1`] = `
"<div style="background: rgb(255, 255, 255); padding: 10px;" class=
"pe-light-tone">
  <a class="pe-fab" tabindex="0">
  <div class="pe-button__content">
    <div class="pe-shadow pe-shadow--animated">
      <div class="pe-shadow__bottom pe-shadow--z-1"></div>
      <div class="pe-shadow__top pe-shadow--z-1"></div>
    </div>
    <div class="pe-ripple pe-ripple--constrained">
      <div class="pe-ripple__mask">
        <div class="pe-ripple__waves"></div>
      </div>
    </div>
    <div class="pe-button__wash"></div>
    <div class="pe-button__focus"></div>
    <div class="pe-fab__content">
      <div class="pe-icon pe-icon--regular">
        <div class="pe-svg">
          <svg xmlns="http://www.w3.org/2000/svg" width="24"
          height="24" viewbox="0 0 24 24">
            <path d=
            "M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=
  "pe-fab tests-fab-themed-fab tests-fab-themed-fab" tabindex="0">
  <div class="pe-button__content">
    <div class="pe-shadow pe-shadow--animated">
      <div class="pe-shadow__bottom pe-shadow--z-1"></div>
      <div class="pe-shadow__top pe-shadow--z-1"></div>
    </div>
    <div class="pe-ripple pe-ripple--constrained">
      <div class="pe-ripple__mask">
        <div class="pe-ripple__waves"></div>
      </div>
    </div>
    <div class="pe-button__wash"></div>
    <div class="pe-button__focus"></div>
    <div class="pe-fab__content">
      <div class="pe-icon pe-icon--regular">
        <div class="pe-svg">
          <svg xmlns="http://www.w3.org/2000/svg" width="24"
          height="24" viewbox="0 0 24 24">
            <path d=
            "M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test No options 1`] = `
"<a class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content"></div>
</div></a>
"
`;

exports[`test Option: checked -- dark tone class 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--on pe-control--regular\">
<input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
  tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button pe-icon-button pe-control__button\"
    tabindex=\"0\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: checked 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--on pe-control--regular\">
<input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
  tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button pe-icon-button pe-control__button\"
    tabindex=\"0\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: class 1`] = `
"<a class="pe-fab class-x class-x" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content"></div>
</div></a>
"
`;

exports[`test Option: className 1`] = `
"<a class="pe-fab className-x className-x" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content"></div>
</div></a>
"
`;

exports[`test Option: content 1`] = `
"<a class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-icon pe-icon--regular">
    <div class="pe-svg">
      <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
      "24" viewbox="0 0 24 24">
        <path d=
        "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
        </path>
      </svg>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: disabled -- dark tone class 1`] = `
"<div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=
      \"pe-button pe-icon-button pe-button--disabled pe-control__button\"
      tabindex=\"-1\" disabled>
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">Off</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=
      \"pe-button pe-icon-button pe-button--disabled pe-control__button\"
      tabindex=\"-1\" disabled>
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">On</label>
    </div>
  </div>
</div>
"
`;

exports[`test Option: disabled 1`] = `
"<div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=
      \"pe-button pe-icon-button pe-button--disabled pe-control__button\"
      tabindex=\"-1\" disabled>
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">Off</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=
      \"pe-button pe-icon-button pe-button--disabled pe-control__button\"
      tabindex=\"-1\" disabled>
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">On</label>
    </div>
  </div>
</div>
"
`;

exports[`test Option: element 1`] = `
"<a content="[object Object]" parentclassname="pe-fab" ripple=
"[object Object]" shadow="[object Object]" ink="" wash=""
animateontap="" element="a"></a>
"
`;

exports[`test Option: icon -- dark tone class 1`] = `
"<a class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: icon 1`] = `
"<a class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: iconButton (custom hover behaviour) 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
  tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button pe-icon-button pe-control__button\"
    tabindex=\"0\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__wash\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: iconOn, iconOff (custom icon) 1`] = `
"<div style="display: flex;">
  <div class=
  "pe-control pe-checkbox-control pe-control--off pe-control--small">
  <input class="pe-control__input" name="" type="checkbox"
    tabindex="-1" /><label class="pe-control__form-label"></label>
    <div class="pe-control__box">
      <label class="pe-control__form-label"></label>
      <div class="pe-button pe-icon-button pe-control__button"
      tabindex="0">
        <label class="pe-control__form-label"></label>
        <div class="pe-button__content">
          <label class="pe-control__form-label"></label>
          <div class="pe-ripple pe-ripple--constrained">
            <label class="pe-control__form-label"></label>
            <div class="pe-ripple__mask">
              <label class="pe-control__form-label"></label>
              <div class="pe-ripple__waves">
                <label class="pe-control__form-label"></label>
              </div>
            </div>
          </div>
          <div class="pe-button__focus">
            <label class="pe-control__form-label"></label>
          </div>
          <div class=
          "pe-icon pe-icon--small pe-control__button--on">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          "pe-icon pe-icon--small pe-control__button--off">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="pe-control__label">
      <label class="pe-control__form-label">small</label>
    </div>
  </div>
  <div class=
  "pe-control pe-checkbox-control pe-control--off pe-control--regular">
  <input class="pe-control__input" name="" type="checkbox"
    tabindex="-1" /><label class="pe-control__form-label"></label>
    <div class="pe-control__box">
      <label class="pe-control__form-label"></label>
      <div class="pe-button pe-icon-button pe-control__button"
      tabindex="0">
        <label class="pe-control__form-label"></label>
        <div class="pe-button__content">
          <label class="pe-control__form-label"></label>
          <div class="pe-ripple pe-ripple--constrained">
            <label class="pe-control__form-label"></label>
            <div class="pe-ripple__mask">
              <label class="pe-control__form-label"></label>
              <div class="pe-ripple__waves">
                <label class="pe-control__form-label"></label>
              </div>
            </div>
          </div>
          <div class="pe-button__focus">
            <label class="pe-control__form-label"></label>
          </div>
          <div class=
          "pe-icon pe-icon--regular pe-control__button--on">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          "pe-icon pe-icon--regular pe-control__button--off">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="pe-control__label">
      <label class="pe-control__form-label">regular</label>
    </div>
  </div>
  <div class=
  "pe-control pe-checkbox-control pe-control--off pe-control--medium">
  <input class="pe-control__input" name="" type="checkbox"
    tabindex="-1" /><label class="pe-control__form-label"></label>
    <div class="pe-control__box">
      <label class="pe-control__form-label"></label>
      <div class="pe-button pe-icon-button pe-control__button"
      tabindex="0">
        <label class="pe-control__form-label"></label>
        <div class="pe-button__content">
          <label class="pe-control__form-label"></label>
          <div class="pe-ripple pe-ripple--constrained">
            <label class="pe-control__form-label"></label>
            <div class="pe-ripple__mask">
              <label class="pe-control__form-label"></label>
              <div class="pe-ripple__waves">
                <label class="pe-control__form-label"></label>
              </div>
            </div>
          </div>
          <div class="pe-button__focus">
            <label class="pe-control__form-label"></label>
          </div>
          <div class=
          "pe-icon pe-icon--medium pe-control__button--on">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          "pe-icon pe-icon--medium pe-control__button--off">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="pe-control__label">
      <label class="pe-control__form-label">medium</label>
    </div>
  </div>
  <div class=
  "pe-control pe-checkbox-control pe-control--off pe-control--large">
  <input class="pe-control__input" name="" type="checkbox"
    tabindex="-1" /><label class="pe-control__form-label"></label>
    <div class="pe-control__box">
      <label class="pe-control__form-label"></label>
      <div class="pe-button pe-icon-button pe-control__button"
      tabindex="0">
        <label class="pe-control__form-label"></label>
        <div class="pe-button__content">
          <label class="pe-control__form-label"></label>
          <div class="pe-ripple pe-ripple--constrained">
            <label class="pe-control__form-label"></label>
            <div class="pe-ripple__mask">
              <label class="pe-control__form-label"></label>
              <div class="pe-ripple__waves">
                <label class="pe-control__form-label"></label>
              </div>
            </div>
          </div>
          <div class="pe-button__focus">
            <label class="pe-control__form-label"></label>
          </div>
          <div class=
          "pe-icon pe-icon--large pe-control__button--on">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          "pe-icon pe-icon--large pe-control__button--off">
            <label class="pe-control__form-label"></label>
            <div class="pe-svg">
              <label class="pe-control__form-label"></label>
              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink=
              "http://www.w3.org/1999/xlink" version="1.1"
              baseprofile="full" width="24" height="24" viewbox=
              "0 0 24.00 24.00" enable-background=
              "new 0 0 24.00 24.00" xml:space="preserve">
                <label class="pe-control__form-label"><path fill=
                "#000000" fill-opacity="1" stroke-width="0.2"
                stroke-linejoin="round" d=
                "M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="pe-control__label">
      <label class="pe-control__form-label">large</label>
    </div>
  </div>
</div>
"
`;

exports[`test Option: id 1`] = `
"<a id="id-x" class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content"></div>
</div></a>
"
`;

exports[`test Option: label 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
  tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button pe-icon-button pe-control__button\"
    tabindex=\"0\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Option: mini 1`] = `
"<a class="pe-fab pe-fab--mini" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: selectable (false) 1`] = `
"<div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--inactive pe-control--regular\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=
      \"pe-button pe-icon-button pe-button--inactive pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">Never</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button pe-icon-button pe-control__button\"
      tabindex=\"0\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">Only when
      unchecked</label>
    </div>
  </div>
</div>
"
`;

exports[`test Option: size 1`] = `
"<div style=\"display: flex;\">
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--small\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button pe-icon-button pe-control__button\"
      tabindex=\"0\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--small pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--small pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">small</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button pe-icon-button pe-control__button\"
      tabindex=\"0\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">regular</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--medium\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button pe-icon-button pe-control__button\"
      tabindex=\"0\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--medium pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--medium pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">medium</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--large\">
  <input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
    tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button pe-icon-button pe-control__button\"
      tabindex=\"0\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--large pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--large pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">large</label>
    </div>
  </div>
</div>
"
`;

exports[`test Option: style (colors) 1`] = `
"<a class="pe-fab" tabindex="0">
<div style=
"color: rgb(255, 204, 188); background-color: rgb(78, 52, 46);"
class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: tabindex 1`] = `
"<a tabindex="3" class="pe-fab">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content"></div>
</div></a>
"
`;

exports[`test Option: url 1`] = `
"<a class="pe-fab" tabindex="0" href="#!/shadow">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: value 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input class=\"pe-control__input\" name=\"worth\" type=\"checkbox\"
tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button pe-icon-button pe-control__button\"
    tabindex=\"0\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: z (0) 1`] = `
"<a class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-0"></div>
    <div class="pe-shadow__top pe-shadow--z-0"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: z (5) 1`] = `
"<a class="pe-fab" tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-5"></div>
    <div class="pe-shadow__top pe-shadow--z-5"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Themed Checkbox (color and font size) 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular tests-checkbox-themed-checkbox\">
<input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
  tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button pe-icon-button pe-control__button\"
    tabindex=\"0\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Themed Checkbox (colors) -- dark tone class 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular tests-checkbox-themed-checkbox\">
<input class=\"pe-control__input\" name=\"\" type=\"checkbox\"
  tabindex=\"-1\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button pe-icon-button pe-control__button\"
    tabindex=\"0\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Themed FAB (colors) 1`] = `
"<a class="pe-fab tests-fab-themed-fab tests-fab-themed-fab"
tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Themed FAB -- dark tone class 1`] = `
"<a class="pe-fab tests-fab-themed-fab tests-fab-themed-fab"
tabindex="0">
<div class="pe-button__content">
  <div class="pe-shadow pe-shadow--animated">
    <div class="pe-shadow__bottom pe-shadow--z-1"></div>
    <div class="pe-shadow__top pe-shadow--z-1"></div>
  </div>
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-fab__content">
    <div class="pe-icon pe-icon--regular">
      <div class="pe-svg">
        <svg xmlns="http://www.w3.org/2000/svg" width="24" height=
        "24" viewbox="0 0 24 24">
          <path d=
          "M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;
